--- a/views/second_room.html
+++ b/views/second_room.html
@@ -534,32 +534,44 @@
   </pre>
 </div>
 <div id="story17-div" class="story-before">
+  <video id="video" autoplay="autoplay">
+    <source src="/trailer.mp4" type="video/mp4" />
+  </video>
   <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .                  .            *      .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'|
+    . |                                       | .
+  .    \                                      \
+       /                                      / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'|
 
-                       o
-                  o    |
-                   \   |
-                    \  |
-                     \.|-.
-                     (\|  )
-          .==================.
-          | .--------------. |
-          | |              | |
-          | |              | |
-          | |    video     | |
-          | |              | |
-          | |              | |
-          | '--------------'o|
-      jgs | LI LI """""""   o|
-          '=================='
+                 o
+            o    |
+             \   |
+              \  |
+               \.|-.
+               (\|  )
+  .============================================.
+  | .----------------------------------------. |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+<a id="info">       >Comment venir a l'evenement ?<      </a>  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | |                                        | |
+  | '----------------------------------------'o|
+  | LI LI """""""                             o|
+  '============================================'
 
-        > <a id="info">Info Soiree</a> <
+
   </pre>
 </div>
 
@@ -590,7 +602,7 @@
       <input type="text" id="number" name="number" value="06 43 31 34 25"><br>
       <input type="submit" id="submit" value="Submit">
     </form>
-      <p id="merci" style="display: none;">                   Merci de vous inscrire</p>
+      <p id="merci" style="display: none;">            Bonne note a été prise de votre inscription</p>
      )    )       _       _       _       _       _       _       (    (
    ,'   .' `.   .' `.   .' `.   .' `.   .' `.   .' `.   .' `.   .' `.   `.
   (    '  _  `-'  _  `-'  _  `-'  _  `-'  _  `-'  _  `-'  _  `-'  _  `    )
