--- a/views/second_room.html
+++ b/views/second_room.html
@@ -534,9 +534,7 @@
   </pre>
 </div>
 <div id="story17-div" class="story-before">
-  <video id="video" autoplay="autoplay">
-    <source src="/trailer.mp4" type="video/mp4" />
-  </video>
+
   <pre class="story-pre">
     *   .                  .            *      .
       ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'|
@@ -554,18 +552,7 @@
   .============================================.
   | .----------------------------------------. |
   | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-<a id="info">       >Comment venir a l'evenement ?<      </a>  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
-  | |                                        | |
+  <video id="video" autoplay="autoplay"><source src="/trailer.mp4" type="video/mp4" /></video><a id="info">       >Comment venir a l'evenement ?<      </a>
   | |                                        | |
   | '----------------------------------------'o|
   | LI LI """""""                             o|
