minimisation de bulle

--- a/views/second_room.html
+++ b/views/second_room.html
@@ -18,12 +18,13 @@
 <div class="container">
 <div id="story-div">
   <pre class="story-pre">
-*   .                  .            *        .
-  ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-. |                                             |  .
-   \    Vous vous trouvez face a une porte      \
-   /            fermée a clef                   / .
-, |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \     Vous vous trouvez face       \
+       /   à une porte fermée à clef      / .
+      |                                  | 
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
  8888888888888888888888888888888888888888888888888
  88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
@@ -52,12 +53,12 @@
 
 <div id="story2-div" class="story-before">
   <pre class="story-pre">
-*   .                  .            *        .
-  ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-. |                                             |  .
-  \              Silence......                  \
-   /                                             / .
-, |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \         Silence.....             \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
  8888888888888888888888888888888888888888888888888
  88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
@@ -85,12 +86,12 @@
 </div>
 <div id="story3-div" class="story-before">
   <pre class="story-pre">
-*   .                  .            *        .
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-  . |                                             |  .
-.    \          ??????!!!!!!!!!                    \
-     /                                             / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \         ???????!!!!!!!!!         \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
  8888888888888888888888888888888888888888888888888
  88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
  88   `-.`!  |`.  -_ -__ -_ _- _-_-  .'  |.;'   88
@@ -119,18 +120,17 @@
 </div>
 <div id="story4-div" class="story-before">
   <pre class="story-pre">
-*   .                  .            *        .
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-  . |                                             |  .
-.    \          ??????!!!!!!!!!                    \
-     /                                             / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \         ???????!!!!!!!!!         \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
   8888888888888888888888888888888888888888888888888
   88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
   88   `-.`!  |`.  -_ -__ -_ _- _-_-  .'  |.;'   88
   88        `;!  ;. _______________ ,'| .-' |   _88
   88..__  ._ | `.| |_______________||."'|  _!.;' 88
-  88   |`` |`";.| i|_|MMMMMMMMMMM|_|'| _!-|   |  88
 ╔═══════════════════════════════════════════════════╗
 
 
@@ -154,12 +154,12 @@
 </div>
 <div id="story5-div" class="story-before">
   <pre class="story-pre">
-*   .                  .            *        .
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-  . |                                             |  .
-.    \          ??????!!!!!!!!!                    \
-     /                                             / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \         ???????!!!!!!!!!         \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
   8888888888888888888888888888888888888888888888888
   88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
   88   `-.`!  |`.  -_ -__ -_ _- _-_-  .'  |.;'   88
@@ -190,12 +190,12 @@
 </div>
 <div id="story6-div" class="story-before">
   <pre class="story-pre">
-*   .                  .            *        .
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-  . |                                             |  .
-.    \                                             \
-     /                                             / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \         ???????!!!!!!!!!         \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
   8888888888888888888888888888888888888888888888888
   88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
 ╔═══════════════════════════════════════════════════╗
@@ -227,18 +227,17 @@
 </div>
 <div id="story7-div" class="story-before">
   <pre class="story-pre">
-*   .                  .            *        .
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-  . |                                             |  .
-.    \          ??????!!!!!!!!!                    \
-     /                                             / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \         ???????!!!!!!!!!         \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
   8888888888888888888888888888888888888888888888888
   88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
   88   `-.`!  |`.  -_ -__ -_ _- _-_-  .'  |.;'   88
   88        `;!  ;. _______________ ,'| .-' |   _88
   88..__  ._ | `.| |_______________||."'|  _!.;' 88
-  88   |`` |`";.| i|_|MMMMMMMMMMM|_|'| _!-|   |  88
 ╔═══════════════════════════════════════════════════╗
 
 
@@ -266,12 +265,13 @@
 
 <div id="story8-div" class="story-before">
   <pre class="story-pre">
-  *   .                  .            *        .
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-  . |                                             |  .
-.    \          La porte s'est ouverte             \
-     /                                             / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \    La porte s'est ouverte        \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
+
 
     8888888888888888888888888888888888888888888888888
     88.._|   | `.  -_-_ _-_  _-  _- -_ -  .'|   |.'88
@@ -300,13 +300,12 @@
 
 <div id="story9-div" class="story-before">
   <pre class="story-pre">
-  *   .                  .            *
-    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'|
-  . |                                       |  .
-.    \    Vous entrez dans une pièce....     \
-     /                                      / .
-  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'|
-
+  *   .              .       *        .
+    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+  . |                                   |  .
+.    \  Vous entrez dans une pièce....  \
+     /                                  / .
+  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
            \                      /
             \                    /
@@ -331,12 +330,12 @@
 </div>
 <div id="story10-div" class="story-before">
   <pre class="story-pre">
-   *   .                  .            *        .
-     ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,|
-   . |                                           |  .
- .    \    Dans cet espace vide il n'y a qu'une  \
-      /              télévision...               / .
-   , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.|
+   *   .              .       *        .
+     ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+   . |                                   |  .
+ .    \   Dans cet espace vide           \
+      /   il n'y a qu'une télévision...  / .
+   , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -360,13 +359,12 @@
 </div>
 
 <div id="story11-div" class="story-before">
-  <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+  *   .              .       *        .
+    ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+  . |                                   |  .
+.    \                                  \
+     /                                  / .
+  , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -390,12 +388,12 @@
 </div>
 <div id="story12-div" class="story-before">
   <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \                                  \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -419,12 +417,12 @@
 </div>
 <div id="story13-div" class="story-before">
   <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \                                  \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -448,12 +446,12 @@
 </div>
 <div id="story14-div" class="story-before">
   <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \                                  \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -477,12 +475,12 @@
 </div>
 <div id="story15-div" class="story-before">
   <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \                                  \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -506,12 +504,12 @@
 </div>
 <div id="story16-div" class="story-before">
   <pre class="story-pre">
-    *   .                  .            *        .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'-,_,-'|
-    . |                                             |  .
-  .    \                                            \
-       /                                            / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \                                  \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                      o
                 o    |
@@ -536,12 +534,12 @@
 <div id="story17-div" class="story-before">
 
   <pre class="story-pre">
-    *   .                  .            *      .
-      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__,.-'|
-    . |                                       | .
-  .    \                                      \
-       /                                      / .
-    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,__,.-'|
+    *   .              .       *        .
+      ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
+    . |                                   |  .
+  .    \                                  \
+       /                                  / .
+    , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
                  o
             o    |
@@ -566,13 +564,13 @@
 
 <div id="info-div" class="story-before">
   <pre class="story-pre">
-    .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.
+     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .-.
    .'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `.
   (    .     .-.     .-.     .-.     .-.     .-.     .-.     .-.     .    )
    `.   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   `._.'   .'
      )    )                                                       (    (
    ,'   ,'                                                         `.   `.
-  (    (              Expo interactive et secrete le 9 aout a 18h:   )    )
+  (    (              Expo interactive et secrete                    )    )
    `.   `.            - Labyrinthe                                 .'   .'
      )    )           - live salle de danse interactive           (    (
    ,'   ,'            - Music :                                    `.   `.
