script intro after key get

--- a/public/css/the_secret_maze.css
+++ b/public/css/the_secret_maze.css
@@ -20,9 +20,7 @@ a:hover {
         text-decoration:none
         cursor:default;
 }
-.text {
-	font-family: game_over;
-}
+
 
 .description {
 	font-family: game_over;
@@ -43,7 +41,8 @@ a:hover {
 	justify-items: center;
 }
 
-.text {
+.text, .text1 {
+	font-family: game_over;
 	margin: 16px;
 	margin-top: 16px;
 	font-size: 1.4em;
