--- a/views/intro.html
+++ b/views/intro.html
@@ -10,6 +10,10 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <link href="css/font.css" rel="stylesheet" type="text/css">
 <link href="css/the_secret_maze.css" rel="stylesheet" type="text/css">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js">
+</script>
+<script src="https://cdn.jsdelivr.net/npm/js-cookie@rc/dist/js.cookie.min.js"></script>
+
 </head>
 
 <body>
@@ -77,8 +81,10 @@ o            |   .  |                           |
  | |           | |
  | |           | |
  |_|___________|_|</pre></a></div>
- <div  id="text"><p class="text">.       *     .      .        Trouve la clef   *   .                 .   +  </p></div>
+ <div  id="text"><p class="text">.       *     .      .        Trouves la clef   *   .                 .   +  </p></div>
+ <div  id="text1"><p class="text1">.       *     .      .      Trouve le secret    *   .                 .   +  </p></div>
  <div  id="description"><p class="description">Pour avoir les infos resouds l'enigme</p></div>
 </div>
+<script src="scripts/intro.js"></script>
 </body>
 </html>
