change size of video

--- a/views/second_room.html
+++ b/views/second_room.html
@@ -23,7 +23,7 @@
     . |                                   |  .
   .    \     Vous vous trouvez face       \
        /   à une porte fermée à clef      / .
-      |                                  | 
+      |                                  |
     , |_,.-'~'-.,__,.-'~'-.,__,.-'~'-.,_ |
 
  8888888888888888888888888888888888888888888888888
@@ -216,7 +216,7 @@
  <a id="game_over">|G|a|m|e| |o|v|e|r|</a>
  +-+-+-+-+ +-+-+-+-+  |    /       \
                       |         .--.\
->  <a id="restart">Revenir a la porte</a> <
+>  <a id="restart">recommencer</a> <
                       `.     |   _.-'
                         `.|__.-'
 ╚═══════════════════════════════════════════════════╝
@@ -359,6 +359,7 @@
 </div>
 
 <div id="story11-div" class="story-before">
+    <pre class="story-pre">
   *   .              .       *        .
     ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
   . |                                   |  .
@@ -550,7 +551,7 @@
   .============================================.
   | .----------------------------------------. |
   | |                                        | |
-  <video id="video" autoplay="autoplay"><source src="/trailer.mp4" type="video/mp4" /></video><a id="info">       >Comment venir a l'evenement ?<      </a>
+  <video id="video" autoplay="autoplay"><source src="/trailer2.mp4" type="video/mp4" /></video><a id="info">       >Comment venir a l'evenement ?<      </a>
   | |                                        | |
   | '----------------------------------------'o|
   | LI LI """""""                             o|
@@ -571,13 +572,13 @@
      )    )                                                       (    (
    ,'   ,'                                                         `.   `.
   (    (              Expo interactive et secrete                    )    )
-   `.   `.            - Labyrinthe                                 .'   .'
-     )    )           - live salle de danse interactive           (    (
+   `.   `.            - Labyrinthe decontruit                       '   .'
+     )    )           - Live salle de danse interactive           (    (
    ,'   ,'            - Music :                                    `.   `.
-  (    (                       line up:                              )    )
+  (    (                       Line up:                              )    )
    `.   `.                       - Max                             .'   .'
-     )    )                      - Jourdan                        (    (
-   ,'   ,'                       - Cherry                         `.   `.
+     )    )                      - Cherry                         (    (
+   ,'   ,'                                                         `.   `.
   (    (                                                             )    )
    `.   `.            Address: 101 avenue gaston Roussel           .'   .'
                 Envoie ton numero et ton nom pour qu'on
@@ -596,6 +597,32 @@
 
   </pre>
 </div>
+<div id="info-div" class="story-before">
+  <pre class="story-pre">
+    <div id="Titre"><pre class="Titre">
+    <span>
+      *   .       -O-    \       ,          .    ,
+      _____ _      |   ,  \ .        .   *          .
+     |_   _| |__   ___     \________.           .
+       | | | '_ \ / _ \    /      _/|
+       | | | | | |  __/   /      /  | .   *          .
+      _|_| |_| |_|\___|        _/   |   </span><span>
+     / ___|  ___  ___ _ __ ___| |_  |________
+     \___ \ / _ \/ __| '__/ _ \ __|/        /|    .
+      ___) |  __/ (__| | |  __/ |_/        / |
+     |____/ \___|\___|_|  \___|\__|_      /  |  </span><span>
+                         /   |  \/  | __ _ __|____ .
+        ________________/    | |\/| |/ _` |_  / _ \
+                        |    | |  | | (_| |/ /  __/\
+          *   .         |    |_|  |_|\__,_/___\___| \
+    o            |   .  |                           |
+           .    -O-     ||||________________|||||||||
+                 |
+    </span></pre></div>
+
+  </pre>
+</div>
+
 <div id="revenir-div" >
   <a href="/" class="revenir-pre">
                    >   REVENIR_AUX_PORTES  <
