--- a/views/intro.html
+++ b/views/intro.html
@@ -81,7 +81,7 @@ o            |   .  |                           |
  | |           | |
  | |           | |
  |_|___________|_|</pre></a></div>
- <div  id="text"><p class="text">.       *     .      .        Trouves la clef   *   .                 .   +  </p></div>
+ <div  id="text"><p class="text">.       *     .      .        Trouve la clef   *   .                 .   +  </p></div>
  <div  id="text1"><p class="text1">.       *     .      .      Trouve le secret    *   .                 .   +  </p></div>
  <div  id="description"><p class="description">Pour avoir les infos resouds l'enigme</p></div>
 </div>
