no selection part1 ->3

--- a/views/intro.html
+++ b/views/intro.html
@@ -17,8 +17,8 @@
 </head>
 
 <body>
-<div class="container">
-<div id="Titre"><pre class="Titre">
+<div class="container" >
+<div id="Titre" class="noselect"><pre class="Titre">
 <span>
   *   .       -O-    \       ,          .    ,
   _____ _      |   ,  \ .        .   *          .
@@ -81,9 +81,9 @@ o            |   .  |                           |
  | |           | |
  | |           | |
  |_|___________|_|</pre></a></div>
- <div  id="text"><p class="text">.       *     .      .        Trouve la clef   *   .                 .   +  </p></div>
- <div  id="text1"><p class="text1">.       *     .      .      Trouve le secret    *   .                 .   +  </p></div>
- <div  id="description"><p class="description">Pour avoir les infos resouds l'enigme</p></div>
+ <div  id="text" class="noselect"><p class="text">.       *     .      .        Trouve la clef   *   .                 .   +  </p></div>
+ <div  id="text1" class="noselect"><p class="text1">.       *     .      .      Trouve le secret    *   .                 .   +  </p></div>
+ <div  id="description" class="noselect"><p class="description">Pour avoir les infos resouds l'enigme</p></div>
 </div>
 <script src="scripts/intro.js"></script>
 </body>
