--- a/views/second_room.html
+++ b/views/second_room.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 <div class="container">
-<div id="story-div">
+<div id="story-div" class="noselect">
   <pre class="story-pre">
     *   .              .       *        .
       ,_,.-'~'-.,__,.-'~'-.,__,.-'-~'-.,__.
