--- a/views/second_room.html
+++ b/views/second_room.html
@@ -551,7 +551,7 @@
   .============================================.
   | .----------------------------------------. |
   | |                                        | |
-  <video id="video" autoplay="autoplay"><source src="/trailer2.mp4" type="video/mp4" /></video><a id="info">       >Comment venir a l'evenement ?<      </a>
+  <video id="video" autoplay="autoplay"><source src="/trailer3.mp4" type="video/mp4" /></video><a id="info">       >Comment venir a l'evenement ?<      </a>
   | |                                        | |
   | '----------------------------------------'o|
   | LI LI """""""                             o|
@@ -588,7 +588,7 @@
       <input type="text" id="number" name="number" placeholder="06 43 31 34 25"><br>
       <button id="submit" type="button" form="form" value="submit">Submit</button>
     </form>
-      <p id="merci" style="display: none;">            Bonne note a été prise de votre inscription</p>
+      <p id="merci" style="display: none;">            inscription confirmé </p>
      )    )       _       _       _       _       _       _       (    (
    ,'   .' `.   .' `.   .' `.   .' `.   .' `.   .' `.   .' `.   .' `.   `.
   (    '  _  `-'  _  `-'  _  `-'  _  `-'  _  `-'  _  `-'  _  `-'  _  `    )
@@ -597,6 +597,7 @@
 
   </pre>
 </div>
+
 <div id="info-div" class="story-before">
   <pre class="story-pre">
     <div id="Titre"><pre class="Titre">
